# SC4000

./: .gitignore  Bots.java  README.md  pyproject.toml  requirements.txt
assets/: model_selection.pkl
report/src/: SC4000.tex  neurips_2024.sty
report/src/graphs/: prepare_data.pptx  test_gender.pptx
report/src/references/: ref.bib
report/src/sections/: abstract.tex  analysis.tex  appendix.tex  conclusion.tex  data.tex  introduction.tex  model.tex
report/src/title/: titlepage.tex
sc4000/: __init__.py
sc4000/eval/: evaluate.py
sc4000/eval/models/: __init__.py  base.py  convnextv2.py  mobilenetv3.py  vit.py
sc4000/eval/utils/: results.py
sc4000/train/: run.py  trainer.py
sc4000/train/models/: __init__.py  convnextv2.py  mobilenetv3.py  model.py  resnet.py  vit.py
sc4000/train/trainer/: sc4000_trainer.py  weighted_trainer.py
sc4000/train/utils/: logger.py
sc4000/utils/: format.py  label_utils.py
scripts/submission/: sc4000-convnext.ipynb  sc4000-single-model.ipynb
scripts/submission/merging-models/: convnextv2-base-x-vit-large.ipynb
scripts/submission/merging-models/convnextv2-base-x-vit-large/: convnextv2-base-x-vit-large.ipynb  vit-large-x-convnext-base.ipynb
scripts/submission/merging-models/convnextv2-base-x-vit-large-x-mobile-net/: analysis.ipynb  convnextv2-base-x-vit-large-x-mobile-net.ipynb  save_image.ipynb
scripts/submission/single-models/convnextv2-base-balanced/: save-model.ipynb
scripts/submission/single-models/convnextv2-base-resized-2600/: convnextv2-base-resized-2600.ipynb  save-model.ipynb
scripts/training/: convnextv2.sh  convnextv2_w.sh  convnextv2_wo.sh  mobilenetv3.sh  vit.sh  vit1.sh  vit1wo.sh  vit2.sh  vit3.sh
src/models/: model.py  vit.py
submission/: final_submission.ipynb
tools/analysis/: training_log.ipynb  wandb_export_2024-11-19T14_09_10.066+08_00.csv  wandb_export_2024-11-19T14_15_43.461+08_00.csv  wandb_export_2024-11-19T14_26_51.667+08_00.csv
tools/data/: balance_data.ipynb  combine_results.ipynb  download_from_kaggle.sh  get_trainingset_res.sh  get_valset_res.sh  split_dataset.ipynb  split_dataset_imbalanced.ipynb  upload_to_hf.py
tools/demo/: CassavaLeaf_Data_Cleaning_and_Processing.ipynb  plot_merge.ipynb
tools/models/: upload.ipynb  upload_cropnet.py  val_res_processing.ipynb  val_res_processing_w.ipynb
tools/models/cropnet/: convert.ipynb  test.ipynb
(+17 files in other folders)
